--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="/assets/js/queue.js"></script>
-		<link rel="stylesheet" href="/assets/css/style.css" />
+		<script src="assets/js/queue.js"></script>
+		<link rel="stylesheet" href="assets/css/style.css" />
 	</head>
 	<body>
 		<div class="overlay" style="display: none">
